# aria-utils

./: README.md  pyproject.toml
ariautils/: midi.py
ariautils/config/: config.json
ariautils/tokenizer/: __init__.py  _base.py  absolute.py  relative.py
ariautils/utils/: __init__.py  config.py
tests/: test_midi.py  test_tokenizer.py
tests/assets/data/: transcription.mid
