[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ariautils"  
version = "0.0.1"
description = "MIDI tokenizers and pre-processing utils"
authors = [{name = "Louis Bradshaw", email = "loua19@outlook.com"}]
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "mido",
]

[project.readme]
file = "neuralpiano/README.md"
content-type = "text/markdown"

keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/EleutherAI/aria-utils"

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ariautils", "ariautils.*"]

[tool.setuptools.package-data]
ariautils = ["config/*.json"]

[tool.black]
line-length = 80
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
packages = ["ariautils", "tests"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
strict_equality = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = ["tests"]
python_files = ["test_*.py"]
